# Starshine-Patcher

./: .gitignore  LICENSE  README.md  build.py  dolpatcher.py  isopatcher.py  patches.xml
python/: dolpatcher.py  isopatcher.py
rust/: Cargo.toml  build.rs  copy.py  patches.xml  repack.py
rust/src/: consts.rs  funcs.rs  main.rs  region.rs  sevenzip.rs  starshine.rs  syati.rs  wit.rs
